--- a/config.json
+++ b/config.json
@@ -1,14 +1,14 @@
 {
-  "input_file": "/home/antoine.laine/Documents/Annotate-contigs/toy/input/dekupl-run_output.tsv.gz",
+  "input_file": "/store/EQUIPES/SSFA/safa.maddouri/Transfert/70718_directContigsForAnnotation",
   "sequence_col": "contig",
   "id_col": "tag",
   "map_to" : ["human"],
-  "human_fasta" : "/home/antoine.laine/Documents/Annotate-contigs/toy/references/part-GRCh38.primary_assembly.genome.fa.gz",
-  "human_gff" : "/home/antoine.laine/Documents/Annotate-contigs/toy/references/part-gencode.v42.primary_assembly.annotation.gtf.gz",
-  "supp_map_to":["HumanRepeats"],
-  "HumanRepeats_fasta" : "/home/antoine.laine/Documents/Annotate-contigs/toy/references/human_repeat_ref.fasta",
-  "output_dir": "/home/antoine.laine/Documents/Annotate-contigs/results",
-  "keep_col": ["contig","nb_merged_kmer","tag"],
+  "supp_map_to" : ["repeats"],
+  "human_index" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/human_index",
+  "human_minimap2_index" :"/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/human_index/minimap2/human.mmi" ,
+  "repeats_fasta" : "/data/work/I2BC/safa.maddouri/gn_ann/general_annot/repeats/human_repeat_ref.fasta",
+  "output_dir": "/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/test_pipeline",
+  "keep_col": ["contig","tag"],
   "threads": 4,
   "library_type": "unstranded"
 }
