--- a/config.json
+++ b/config.json
@@ -1,15 +1,18 @@
 {
-  "input_file": "/store/EQUIPES/SSFA/MEMBERS/safa.maddouri/general_annotation/Annotation70718_directContigsForAnnotation/merged_annotation.tsv",
+  "mode" : "index",
+  "input_file": "/data/work/I2BC/fadwa.elkhaddar/SSFA/NewVersionAnnotContig/data/merged_annotation.tsv",
   "sequence_col": "contig",
   "id_col": "tag",
   "map_to" : ["human"],
   "supp_map_to" : ["repeats"],
-  "human_index" : "/store/EQUIPES/SSFA/MEMBERS/safa.maddouri/general_annotation/human_index",
-  "human_minimap2_index" :"/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/human_index" ,
   "preset" : "map-ont",
-  "repeats_fasta" : "/data/work/I2BC/safa.maddouri/Uveal/Annotate_contigs_uveal/human_repeat_ref.fasta",
-  "output_dir": "/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/Test3",
+  "supp_map_to_fasta" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/NewVersionAnnotContig/data/human_repeat_ref.fasta",
+  "output_dir": "/data/work/I2BC/fadwa.elkhaddar/SSFA/NewVersionAnnotContig/test_new_version",
   "keep_col": ["contig","tag"],
-  "threads": 4,
-  "library_type": "unstranded"
+  "threads": 5,
+  "library_type": "unstranded",
+  "reference": "/data/work/I2BC/fadwa.elkhaddar/SSFA/NewVersionAnnotContig/data/reference.fa.gz",
+  "annotation" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/NewVersionAnnotContig/data/part_annotation.gtf.gz",
+  "star_index" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/NewVersionAnnotContig/star",
+  "minimap2_index" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/NewVersionAnnotContig/minimap2/human.mmi"
 }
