Replace master content with Add_minimap2

--- a/config.json
+++ b/config.json
@@ -1,14 +1,18 @@
 {
-  "input_file": "/home/antoine.laine/Documents/Annotate-contigs/toy/input/dekupl-run_output.tsv.gz",
+  "mode" : "index",
+  "input_file": "/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/data/input_table.tsv",
   "sequence_col": "contig",
   "id_col": "tag",
   "map_to" : ["human"],
-  "human_fasta" : "/home/antoine.laine/Documents/Annotate-contigs/toy/references/part-GRCh38.primary_assembly.genome.fa.gz",
-  "human_gff" : "/home/antoine.laine/Documents/Annotate-contigs/toy/references/part-gencode.v42.primary_assembly.annotation.gtf.gz",
-  "supp_map_to":["HumanRepeats"],
-  "HumanRepeats_fasta" : "/home/antoine.laine/Documents/Annotate-contigs/toy/references/human_repeat_ref.fasta",
-  "output_dir": "/home/antoine.laine/Documents/Annotate-contigs/results",
-  "keep_col": ["contig","nb_merged_kmer","tag"],
-  "threads": 4,
-  "library_type": "unstranded"
+  "supp_map_to" : ["repeats"],
+  "preset" : "map-ont",
+  "supp_map_to_fasta" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/data/human_repeat_ref.fasta",
+  "output_dir": "/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/test_new_version",
+  "keep_col": ["contig","tag"],
+  "threads": 5,
+  "library_type": "unstranded",
+  "reference": "/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/data/reference.fa.gz",
+  "annotation" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/data/part_annotation.gtf.gz",
+  "star_index" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/star",
+  "minimap2_index" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/Annotate-contigs/minimap2/human.mmi"
 }
