--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 human_index/
 update/
 configs/
+melanoma_filtered/
+run_test.sh
+data/Contigs_melanoma_filteredFinal_log2fcSup2.tsv
+data/annotation.gtf.gz
+data/human_repeat_ref.fasta.ndb
+data/human_repeat_ref.fasta.nhr
+data/human_repeat_ref.fasta.nin
+data/human_repeat_ref.fasta.njs
+data/human_repeat_ref.fasta.not
+data/human_repeat_ref.fasta.nsq
+data/human_repeat_ref.fasta.ntf
+data/human_repeat_ref.fasta.nto
+data/log2FC_sup3_lensup35_toAnnotate_safa.tsv
+data/melanoma_filteredFinal_log2fcSup2_lensup35_safa.tsv
+data/reference.fa.gz
+
