--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-  "mode" : "table",
-  "input_file": "/data/work/I2BC/fadwa.elkhaddar/SSFA/UPDATE/Annotate-contigs/data/input_file.tsv",
+  "mode" : "index",
+  "input_file": "data/input_file.tsv",
   "sequence_col": "contig",
   "id_col": "tag",
   "map_to" : ["human"],
   "supp_map_to" : ["repeats"],
   "preset" : "map-ont",
-  "supp_map_to_fasta" : ["/data/work/I2BC/fadwa.elkhaddar/SSFA/UPDATE/Annotate-contigs/data/human_repeat_ref.fasta"],
-  "output_dir": "melanoma_filtered",
+  "supp_map_to_fasta" : ["data/human_repeat_ref.fasta"],
+  "output_dir": "output",
   "keep_col": ["contig","tag"],
   "threads": 5,
   "library_type": "unstranded",
   "reference": "",
-  "annotation" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/human_index/annotation.gtf.gz",
-  "star_index" : "/store/EQUIPES/SSFA/MEMBERS/safa.maddouri/general_annotation/human_index/star",
-  "minimap2_index" : "/data/work/I2BC/fadwa.elkhaddar/SSFA/human_index/minimap2/human.mmi"
+  "annotation" : "/path/to/annotation.gtf.gz",
+  "star_index" : "",
+  "minimap2_index" : ""
 }
