add contamination option

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,18 @@ data/human_repeat_ref.fasta.nto
 data/log2FC_sup3_lensup35_toAnnotate_safa.tsv
 data/melanoma_filteredFinal_log2fcSup2_lensup35_safa.tsv
 data/reference.fa.gz
+data/1000_contigs_melanoma.tsv
+data/Pancreas_log2FC_sup3_lensup35_toAnnotate.tsv
 config_test.json
+New_version_2
+New_version
+config_test_contamination.json
+Snakefile_with_all_databes
+annotatecontig.sif
+GCF_026418735.1_ASM2641873v1_genomic.fna.gz
+databases/
+script/test.tsv
+script/mergeAnnot_update.py
+script/mergeAnnot_original.py
+script/mergeAnnot_all_db.py
+script/__pycache__/mergeAnnot_original.cpython-312.pyc
