update : remove secondary alignement rule and correction of MAP_TO parameter

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ script/mergeAnnot_original.py
 script/mergeAnnot_all_db.py
 script/__pycache__/mergeAnnot_original.cpython-312.pyc
 data/output/
+data/contigs.txt
