--- a/config.json
+++ b/config.json
@@ -1,20 +1,22 @@
 {
   "mode" : "index",
   "input_file": "data/input_file.tsv",
-  "sequence_col": "contig",
-  "id_col": "tag",
-  "map_to" : ["human"],
-  "supp_map_to" : ["repeats"],
-  "preset" : "map-ont",
-  "supp_map_to_fasta" : ["data/human_repeat_ref.fasta"],
-  "output_dir": "output",
-  "keep_col": ["contig","tag"],
-  "threads": 5,
-  "library_type": "unstranded",
-  "reference": "",
+  "map_to" : "human",
+  "reference": "/path/to/reference.fa.gz",
   "annotation" : "/path/to/annotation.gtf.gz",
   "star_index" : "",
   "minimap2_index" : "",
+  "preset": "splice",
+  "sequence_col": "contig",
+  "id_col": "tag",
+  "output_dir": "output",
+  "keep_col": ["contig","tag"],
+  "library_type": "unstranded",
+  "supp_map_to" : ["repeats"],
+  "supp_map_to_fasta" : ["data/human_repeat_ref.fasta"],
   "contamination": False,
   "database" : "",
+  "threads": 4,
 }
+
+
